# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2020-07-15 Michael Truog   <mjtruog at protonmail dot com>

    * Fix the Haskell CloudI API subscribe function so an execution thread
      will properly cycle through the subscriptions using the same pattern

2020-07-14 Michael Truog   <mjtruog at protonmail dot com>

    * Add a FatalError exception to the
      Go, Haskell, OCaml CloudI API that must
      cause the service process to restart
    * Add an Assert function to the Go CloudI API with an
      AssertionError exception
    * Ensure all external service CloudI APIs handle an AssertionError
      as a fatal error that causes the service process to restart
    * Haskell, Python, Python/C, Ruby CloudI API now correctly
      handle exit being called in a service request callback function

2020-07-13 Michael Truog   <mjtruog at protonmail dot com>

    * Change the C++ CloudI API fatal_exception name to fatal_error
    * Add a FatalError exception class to the
      Java, JavaScript, Perl, PHP, Python, Python/C, Ruby CloudI API
      to be a base class for exceptions that must
      cause the service process to restart
    * Now require PHP 7 for the PHP CloudI API for its exception hierarchy

2020-07-11 Michael Truog   <mjtruog at protonmail dot com>

    * Improve Python/C CloudI API exception handling
    * Add the fatal_exception class to the C++ CloudI API
      for usage as the base class of exceptions that must terminate
      the service process
      (assert functions will cause the service process to restart with
       C usage of assert.h calling abort to send a SIGABRT signal and
       C++ usage of CloudI::API::fatal_exception for any assert exceptions)

2020-07-10 Michael Truog   <mjtruog at protonmail dot com>

    * Improve CloudI API service request exception handling
      to ensure unrecoverable exceptions and assertions cause
      the service process to restart