@@ -122,6 +122,14 @@
                                     erlang:integer_to_list(Instance))
         end).
 
+% locally registered names for the supool cloudi_core_i_os_spawn processes
+% OS_SPAWN_POOL1 is used for creating service OS processes and
+%                collecting stdout/stderr stream data
+% OS_SPAWN_POOL2 is used for separate functionality that must not block on
+%                managing service OS processes, like kill function calls
+-define(OS_SPAWN_POOL1, cloudi_core_i_os_spawn_pool1).
+-define(OS_SPAWN_POOL2, cloudi_core_i_os_spawn_pool2).
+
 % maximum timeout value for erlang:send_after/3, gen_server:call and
 % internal/external service requests
 -define(TIMEOUT_MAX_ERLANG, 4294967295).
