@@ -91,14 +91,17 @@ start_link(Config) when is_record(Config, config) ->
 -define(CHECK,
         (is_tuple(child_specification(cloudi_core_i_services_external_sup))
          andalso
-         is_tuple(child_specification(cloudi_core_i_os_spawn_pool)))).
+         is_tuple(child_specification(?OS_SPAWN_POOL1))
+         andalso
+         is_tuple(child_specification(?OS_SPAWN_POOL2)))).
 -else.
 -define(CHILDSPECS,
         [child_specification(cloudi_core_i_logger_sup, Config),
          child_specification(cloudi_core_i_logger, Config),
          child_specification(cloudi_core_i_nodes, Config),
          child_specification(cloudi_core_i_services_monitor),
-         child_specification(cloudi_core_i_os_spawn_pool),
+         child_specification(?OS_SPAWN_POOL1),
+         child_specification(?OS_SPAWN_POOL2),
          child_specification(cloudi_core_i_services_external_sup),
          child_specification(cloudi_core_i_services_internal_sup),
          child_specification(cloudi_core_i_configurator, Config),
@@ -157,11 +160,13 @@ child_specification(cloudi_core_i_services_internal_sup) ->
      {cloudi_core_i_services_internal_sup, start_link, []},
      permanent, infinity, supervisor, [cloudi_core_i_services_internal_sup]};
 
-child_specification(cloudi_core_i_os_spawn_pool) ->
+child_specification(OsSpawnPool)
+    when OsSpawnPool =:= ?OS_SPAWN_POOL1;
+         OsSpawnPool =:= ?OS_SPAWN_POOL2 ->
     Shutdown = 2000, % milliseconds
-    {cloudi_core_i_os_spawn_pool,
+    {OsSpawnPool,
      {cloudi_x_supool_sup, start_link,
-      [cloudi_core_i_os_spawn, os_process_count(),
+      [OsSpawnPool, os_process_count(),
        {undefined, {cloudi_core_i_os_spawn, start_link, []},
         permanent, Shutdown, worker, [cloudi_core_i_os_spawn]}, []]},
      permanent, infinity, supervisor, [cloudi_x_supool_sup]};
@@ -171,12 +176,6 @@ child_specification(cloudi_core_i_services_external_sup) ->
      {cloudi_core_i_services_external_sup, start_link, []},
      permanent, infinity, supervisor, [cloudi_core_i_services_external_sup]}.
 
-% determine the number of cloudi_core_i_os_spawn child processes within the
-% cloudi_x_supool_sup, referenced by the locally registered name (of the pool):
-% 'cloudi_core_i_os_spawn'
-
-%os_process_count() ->
-%    1.
 os_process_count() ->
     erlang:system_info(schedulers).
 
