@@ -234,7 +234,7 @@ os_spawn_kill_pids(SignalInteger, Group, OSPids)
     os_spawn_kill_pids(SignalInteger, Group, [OSPids]);
 os_spawn_kill_pids(SignalInteger, Group, OSPids)
     when is_integer(SignalInteger), is_boolean(Group), is_list(OSPids) ->
-    SpawnProcess = cloudi_x_supool:get(cloudi_core_i_os_spawn),
+    SpawnProcess = cloudi_x_supool:get(?OS_SPAWN_POOL2),
     case cloudi_core_i_os_spawn:kill_pids(SpawnProcess,
                                           SignalInteger, Group, OSPids) of
         {ok, ErrorString} ->
